# tetrika-junior

./: .gitignore  README.md  animal_crossing.py  annotation_decorator.py  lessons_duration.py  pyproject.toml  requirements.txt  type_hints_decorator.py
task1/: decorated_funcs.py  solution.py  strict_types_decorator.py
task2/: config.py  core.py  data_manager.py  logger_config.py  parser.py  report.csv  report_writer.py  solution.py
task3/: intervals.json  json_interaction.py  solution.py
tests/: json_interaction.py
tests/task1/: conftest.py  sum_two_cases.json  test_sum_two.py  test_sum_two_function.py  test_task1.py
tests/task1/cases/: sum-two-cases.json
tests/task2/: conftest.py  test_parser.py
tests/task2/cases/: animals-data-cases.json  url-cases.json
