[project]
name = "tetrika-junior"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksander Zizevskikh",email = "zizevskikh.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
pandas = "^2.2.3"

