[project]
name = "tetrika-junior"
version = "1.0.1"
description = "A collection of Python exercises demonstrating parsing, decorators, and data validation."
authors = [
    {name = "Aleksander Zizevskikh",email = "zizevskikh.dev@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "task1" },
    { include = "task2" },
    { include = "task3" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
pandas = "^2.2.3"
black = "^25.1.0"

[tool.poetry.group.test.dependencies]
loguru = { version = "^0.7.3", python = ">=3.12,<4.0" }
