[project]
name = "tetrika-junior"
version = "1.0.1"
description = "A collection of Python exercises demonstrating parsing, decorators, and data validation."
authors = [
    {name = "Aleksander Zizevskikh",email = "zizevskikh.dev@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.13.4"
black = "^25.1.0"
loguru = { version = "^0.7.3", python = "<4.0,>=3.5" }
lxml = "^5.4.0"
pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
